# PPN-microbench

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci_pipeline.yml
docs/: context.md  output.md
include/PPN-microbench/: conductor.hpp  constants.hpp  context.hpp  cpu_frequency.hpp  memory.hpp  microbench.hpp  ops.hpp  rdtsc.hpp
include/PPN-microbench/ops/: abstract_ops.hpp  flops.hpp  iops.hpp
main/: CMakeLists.txt  conductor_main.cpp  main.cpp
report/: main.py
report/elements/: __init__.py  base.py
report/elements/bench/: __init__.py  base.py  core_to_core_latency.py  cpu_frequency.py  memory.py  ops.py
report/elements/styles/: styles.css
src/PPN-microbench/: CMakeLists.txt  conductor.cpp  context.cpp  core_to_core_latency.cpp  cpu_frequency.cpp  driver.cpp  memory.cpp  microbench.cpp  ops.cpp
src/PPN-microbench/ops/: abstract_ops.cpp  flops.cpp  iops.cpp
